--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Adafruit's Arduino NINA-W102 firmware 1.7.5 - 2023.07.21
+
+* Fixed Adafruit IO Root SSL Certificate
+
 Adafruit's Arduino NINA-W102 firmware 1.7.4 - 2021.06.03
 
 * Fixed support for custom hostname in WiFi client mode
